--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,35 +1,18 @@
-pip install --upgrade pip
-streamlit
-pandas
-numpy
-matplotlib
-seaborn
-spacy
-es-core-news-sm
-wordcloud
-nltk
-unidecode
-transformers
-bertopic
-openai
-python-dotenv
+pandas==2.0.3
+numpy==1.24.3
+matplotlib==3.7.2
+seaborn==0.12.2
+spacy==3.6.1
+wordcloud==1.9.2
+nltk==3.8.1
+unidecode==1.3.6
+transformers==4.33.3
+bertopic==0.14.1
+openai==0.28.0
+python-dotenv==1.0.0
 rich==13.9.4
 pygments==2.19.1
 markdown-it-py==3.0.0
 mdurl==0.1.2
-python-dotenv
-scikit-learn
-nltk
-unidecode
-transformers
-altair
-re
-import seaborn as sns
-word_tokenize
-stopwords
-pipeline
-Counter
-OpenAI
-load_dotenv
-os
-io  
+scikit-learn==1.3.0
+altair==5.1.2
